--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   "dependencies": {
     "react": "18.0.0",
     "react-native": "0.69.5",
-    "react-native-fbsdk-next": "10.1.0"
+    "react-native-fbsdk-next": "10.1.0",
+    "react-native-paper": "^5.1.4",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.19.0",
+    "@react-navigation/material-bottom-tabs": "^6.2.12",
+    "@react-navigation/native": "^6.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.19.0",
