--- a/package.json
+++ b/package.json
@@ -4,29 +4,37 @@
   "private": true,
   "scripts": {
     "clean": "rm -fr yarn.lock node_modules ios/Podfile.lock",
-    "android": "react-native run-android --no-jetifier",
+    "android": "react-native run-android",
     "ios": "cd ios && rm -f Podfile.lock && pod install && cd .. && react-native run-ios",
     "stop": "ps aux | grep 'react-native' | grep -v 'grep' | awk '{print $2}' | xargs kill -9"
   },
   "dependencies": {
-    "react": "18.0.0",
-    "react-native": "0.69.5",
-    "react-native-fbsdk-next": "10.1.0",
+    "@react-native-masked-view/masked-view": "^0.2.8",
+    "@react-navigation/elements": "^1.3.14",
+    "@react-navigation/material-bottom-tabs": "^6.2.12",
+    "@react-navigation/native": "^6.1.3",
+    "react": "18.2.0",
+    "react-native": "0.71.2",
+    "react-native-fbsdk-next": "11.1.0",
     "react-native-paper": "^5.1.4",
     "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.19.0",
-    "@react-navigation/material-bottom-tabs": "^6.2.12",
-    "@react-navigation/native": "^6.1.3"
+    "react-native-screens": "^3.19.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.0",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "babel-jest": "^26.6.3",
-    "eslint": "^7.32.0",
-    "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.70.3",
-    "react-test-renderer": "18.0.0",
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
+    "@react-native-community/eslint-config": "^3.2.0",
+    "@tsconfig/react-native": "^2.0.2",
+    "@types/jest": "^29.2.1",
+    "@types/react": "^18.0.24",
+    "@types/react-test-renderer": "^18.0.0",
+    "babel-jest": "^29.2.1",
+    "eslint": "^8.19.0",
+    "jest": "^29.2.1",
+    "metro-react-native-babel-preset": "0.73.7",
+    "prettier": "^2.4.1",
+    "react-test-renderer": "18.2.0",
     "react-proxy": "1.1.8"
   },
   "jest": {
